# HistoricDisks

./: .gitignore  .gitmodules  AUTHORS.md  CODE_OF_CONDUCT.md  README.md  References.bib  requirements.txt
CPP/StraightECMC/: CMakeLists.txt  Param.h  README.md  StraightEcmc.h  cell.cc  init.cc  inout.cc  main.cc  refresh.cc  run.cc  straightEcmc.cc
DigitizedData/: Readme.md  ThisWork.csv
DigitizedData/Alder_1962/: Alder_1962.csv
DigitizedData/Bernard_2011/: Bernard_2011.csv
DigitizedData/Engel_2013/: Engel_2013.csv
DigitizedData/Jaster_1999/: Jaster_1999.csv
DigitizedData/Jaster_2004/: Jaster_2004.csv
DigitizedData/Mak_2006/: Mak_2006.csv
DigitizedData/Metropolis_1953/: Metropolis_1953.csv
DigitizedData/Qi_2014/: Qi_2014.csv
DigitizedData/Zollweg_1992/: Zollweg_1992.csv
Python/analysis/: analysis_h5.py  error_bar.py  h5_read.py  psi6.py
Python/four-disk/: ECMC_Newtonian_disks_box.py  ECMC_forward_disks_box.py  ECMC_reflective_disks_box.py  ECMC_straight_disks.py  Metropolis_disks_box.py  common.py  fitting.py  molecular_disks_box.py
Python/naive/: ECMC_Newtonian.py  ECMC_forward.py  ECMC_reflective.py  ECMC_straight.py  Metropolis.py  common.py  molecular_dynamics.py
Python/synopsis/: plot.py  read.py
